nlamah/src/main/resources/org/nlamah/QL/test/error/cyclicDependency.ql
form test
{
	question1 boolean "test question" = question1
}